--- a/src/components/MobileNav.astro
+++ b/src/components/MobileNav.astro
@@ -161,7 +161,7 @@ const isActive = (path: string) => {
           }`}
           style="white-space: nowrap;"
         >
-          Docs
+          {lang === "zh-SG" ? "文档" : "Docs"}
         </span>
         {
           isActive("/docs") && (
